err/daarmaan.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Daarmaan-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/daarmaan'...
Listing './lib/python3.5/site-packages/daarmaan/client'...
Compiling './lib/python3.5/site-packages/daarmaan/client/backends.py'...
***   File "./lib/python3.5/site-packages/daarmaan/client/backends.py", line 120
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/daarmaan/client/handlers.py'...
***   File "./lib/python3.5/site-packages/daarmaan/client/handlers.py", line 28
    print ">>>> ", session
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/daarmaan/server'...
Compiling './lib/python3.5/site-packages/daarmaan/server/forms.py'...
***   File "./lib/python3.5/site-packages/daarmaan/server/forms.py", line 45
    print "]]]] ", a
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/daarmaan/server/middlewares.py'...
***   File "./lib/python3.5/site-packages/daarmaan/server/middlewares.py", line 16
    print "TEST: cookies: ", request.COOKIES
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
